
[workspace]
members = [
    "learn/hello_world", 
    "learn/SmartPointers", 
    "learn/Errors",
    "learn/Async", 
    "learn/Generics",
    # "learn/Threading",
    "learn/threading",
    "learn/common-programming-concept",
    # 
    "DSA",
    #
    "project/guessing_game",
    "project/bank",
    "project/cat",
    "project/echor",
    "project/hello",
    #
    
]

[workspace.dependencies]
cc = "1.0.73"
rand = "0.8.5"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
time = "0.1.12"
rocket = "0.5.0-rc.2"
clap = {version="4.1.11", features=["derive"]}
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
WrkSpc = { path = "./libraries/WrkSpc"}